--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_svg: ^2.0.0+1
   google_fonts: ^4.0.3
   http: ^0.13.5
+  lottie: ^2.2.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
