--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.0+1
+  get: ^4.6.5
   google_fonts: ^4.0.3
   http: ^0.13.5
   lottie: ^2.2.0
